# tkrzw

./: CMakeLists.txt  CMakePresets.json  ChangeLog  Config.cmake.in  Doxyfile  Makefile.in  README  VCMakefile  configure  configure.in  dockerfile  doxy-overview.h  tkrzw.pc.in  tkrzw_build_util.cc  tkrzw_cmd_util.cc  tkrzw_cmd_util.h  tkrzw_cmd_util_test.cc  tkrzw_compress.cc  tkrzw_compress.h  tkrzw_compress_test.cc  tkrzw_containers.h  tkrzw_containers_test.cc  tkrzw_dbm.cc  tkrzw_dbm.h  tkrzw_dbm_async.cc  tkrzw_dbm_async.h  tkrzw_dbm_async_test.cc  tkrzw_dbm_baby.cc  tkrzw_dbm_baby.h  tkrzw_dbm_baby_test.cc  tkrzw_dbm_cache.cc  tkrzw_dbm_cache.h  tkrzw_dbm_cache_test.cc  tkrzw_dbm_common_impl.cc  tkrzw_dbm_common_impl.h  tkrzw_dbm_common_impl_test.cc  tkrzw_dbm_hash.cc  tkrzw_dbm_hash.h  tkrzw_dbm_hash_impl.cc  tkrzw_dbm_hash_impl.h  (+101 more)
.github/workflows/: build_and_test.yml  cmake.yml
doc/: durability.xhtml  index.xhtml  make_toc.pl  prism.js
example/: Makefile  VCMakefile  accesscounter.cc  asyncdbm_ex1.cc  babydbm_ex1.cc  babydbm_ex2.cc  cachedbm_ex1.cc  fileindex_ex1.cc  hashdbm_ex1.cc  hashdbm_ex2.cc  hashdbm_ex3.cc  helloworld.cc  invindex_ex1.cc  langc_ex1.c  langc_ex1.cc  langc_ex2.c  langc_ex3.c  memindex_ex1.cc  polydbm_ex1.cc  polyindex_ex1.cc  sharddbm_ex1.cc  skipdbm_ex1.cc  skipdbm_ex2.cc  skipdbm_ex3.cc  stdindex_ex1.cc  stdtreedbm_ex1.cc  stdtreedbm_ex2.cc  struct_ex1.cc  tinydbm_ex1.cc  tinydbm_ex2.cc  transfer.cc  treedbm_ex1.cc  treedbm_ex2.cc  treedbm_ex3.cc  treedbm_ex4.cc  ulogrestore.cc
